Implement nested OpenID4VP flow for presentation during issuance on v1.0 (#158)
* Implement nested OpenID4VP flow for presentation during issuance on v1.0

Signed-off-by: Ingrid Kamga <Ingrid.Kamga@adorsys.com>
Signed-off-by: Ingrid Kamga <xingridkamga@gmail.com>
Signed-off-by: Ingrid Kamga <Ingrid.Kamga@adorsys.com>

* Addres AI review comments

Signed-off-by: Ingrid Kamga <Ingrid.Kamga@adorsys.com>

* Address review comments by @Ogenbertrand and @forkimenjeckayang

Signed-off-by: Ingrid Kamga <Ingrid.Kamga@adorsys.com>

* Log misconfigured GuardedCredentialScope to ease debugging

Signed-off-by: Ingrid Kamga <Ingrid.Kamga@adorsys.com>

---------

Signed-off-by: Ingrid Kamga <Ingrid.Kamga@adorsys.com>
Signed-off-by: Ingrid Kamga <xingridkamga@gmail.com>